apps/generic/overlays/berenstain-bears/patches/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berenstain-bears
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: container
          image: ghcr.io/gandazgul/berenstain-bears:dev
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 200Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
