apps/generic/overlays/berenstain-bears/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: berenstain-bears
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
